<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <CheckBox
        android:id="@+id/node_checkBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="17sp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/node_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/node_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17sp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/node_checkBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>